# cpp-dsp-showcase

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  dsp-enhancement.yml  feature_request.yml
.github/workflows/: cmake-multi-platform.yml  codeql.yml  generated-benchmark-report.yml  sanitizers.yml
benchmarks/: baseline.example.json
datasets/: README.md
docs/: algorithm-evidence-matrix.md  api-stability.md  benchmark-discipline.md  direct-fir-vs-overlap-save.md  dsp-quality-gates.md  fpga-mapping.md  golden-vector-policy.md  performance-metrics.md  release-checklist.md  release-notes-v0.1.0.md  reviewer-guide.md  reviewer-quick-check.md  roadmap.md  verification.md  zynq-sdr-course-bridge.md
examples/downstream_cmake_project/: README.md
examples/external_cmake_consumer/: CMakeLists.txt  README.md  main.cpp
examples/external_cmake_project/: README.md
examples/install_consumer/: CMakeLists.txt  main.cpp
reports/: README.md  benchmark_report.example.md  benchmark_report.template.md
test_vectors/: README.md
tools/: generate_benchmark_report.py
